[gd_scene load_steps=19 format=3 uid="uid://c01t4rpb1fca7"]

[ext_resource type="Script" path="res://test_2.gd" id="1_teeeg"]
[ext_resource type="Texture2D" uid="uid://bwa4k38mf4uvx" path="res://espada.png" id="2_v2va7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b17iu"]
bg_color = Color(0.313726, 0.160784, 0.160784, 0.34902)
border_width_left = 5
border_width_top = 3
border_width_right = 5
border_width_bottom = 3
border_color = Color(0.54902, 0.243137, 0.243137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mnmqh"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
expand_margin_right = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s5682"]
bg_color = Color(0.611765, 0, 0.0117647, 1)
border_width_left = 2
border_width_top = 2
border_width_bottom = 2
expand_margin_left = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3l5ld"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
expand_margin_right = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c1a7s"]
bg_color = Color(0.0941176, 0.470588, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_bottom = 2
expand_margin_left = 2.0

[sub_resource type="Animation" id="Animation_qwjcr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(850, 215)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect3:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1150, 215)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(550, 215)]
}

[sub_resource type="Animation" id="Animation_c3fmb"]
resource_name = "attack"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(550, 215), Vector2(550, 287), Vector2(550, 215)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"middle_attack"
}]
}

[sub_resource type="Animation" id="Animation_vh7kv"]
resource_name = "attack_2"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(850, 215), Vector2(850, 287), Vector2(850, 215)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"middle_attack"
}]
}

[sub_resource type="Animation" id="Animation_mqa1f"]
resource_name = "attack_3"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect3:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1150, 215), Vector2(1150, 287), Vector2(1150, 215)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"middle_attack"
}]
}

[sub_resource type="Animation" id="Animation_cp3e5"]
resource_name = "enemy1_miss"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(550, 215), Vector2(550, 287), Vector2(550, 215)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"player_received_damage"
}]
}

[sub_resource type="Animation" id="Animation_63qbv"]
resource_name = "enemy2_miss"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(850, 215), Vector2(850, 287), Vector2(850, 215)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"player_received_damage"
}]
}

[sub_resource type="Animation" id="Animation_n5qsp"]
resource_name = "enemy3_miss"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect3:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1150, 215), Vector2(1150, 287), Vector2(1150, 215)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"player_received_damage"
}]
}

[sub_resource type="Animation" id="Animation_5bkgy"]
resource_name = "show_damage"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DamageCounter:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TurnOver:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p34au"]
_data = {
"RESET": SubResource("Animation_qwjcr"),
"attack": SubResource("Animation_c3fmb"),
"attack_2": SubResource("Animation_vh7kv"),
"attack_3": SubResource("Animation_mqa1f"),
"enemy1_miss": SubResource("Animation_cp3e5"),
"enemy2_miss": SubResource("Animation_63qbv"),
"enemy3_miss": SubResource("Animation_n5qsp"),
"show_damage": SubResource("Animation_5bkgy")
}

[sub_resource type="Animation" id="Animation_5vb7g"]
resource_name = "show_damage"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DamageCounter:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hefph"]
_data = {
"show_damage": SubResource("Animation_5vb7g")
}

[node name="Test2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_teeeg")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -490.0
offset_top = -354.0
offset_right = 686.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_b17iu")

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 1121.0
offset_top = 819.0
offset_right = 1379.0
offset_bottom = 850.0
theme_override_styles/background = SubResource("StyleBoxFlat_mnmqh")
theme_override_styles/fill = SubResource("StyleBoxFlat_s5682")
step = 1.0
value = 30.0
show_percentage = false

[node name="Enemy1ProgressBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 527.0
offset_top = 402.0
offset_right = 744.0
offset_bottom = 433.0
theme_override_styles/background = SubResource("StyleBoxFlat_3l5ld")
theme_override_styles/fill = SubResource("StyleBoxFlat_c1a7s")
max_value = 30.0
step = 1.0
value = 20.0
show_percentage = false

[node name="Enemy2ProgressBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 825.0
offset_top = 402.0
offset_right = 1042.0
offset_bottom = 433.0
theme_override_styles/background = SubResource("StyleBoxFlat_3l5ld")
theme_override_styles/fill = SubResource("StyleBoxFlat_c1a7s")
max_value = 30.0
step = 1.0
value = 15.0
show_percentage = false

[node name="Enemy3ProgressBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 1128.0
offset_top = 402.0
offset_right = 1345.0
offset_bottom = 433.0
theme_override_styles/background = SubResource("StyleBoxFlat_3l5ld")
theme_override_styles/fill = SubResource("StyleBoxFlat_c1a7s")
max_value = 30.0
step = 1.0
value = 10.0
show_percentage = false

[node name="AttackBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 547.0
offset_top = 846.0
offset_right = 773.0
offset_bottom = 923.0
theme_override_font_sizes/font_size = 50
text = "Attack"

[node name="DefendBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 801.0
offset_top = 844.0
offset_right = 1027.0
offset_bottom = 921.0
theme_override_font_sizes/font_size = 50
text = "Defend"

[node name="BiteBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 540.0
offset_top = 962.0
offset_right = 766.0
offset_bottom = 1039.0
theme_override_font_sizes/font_size = 50
text = "Bite"

[node name="TurnOver" type="Button" parent="."]
layout_mode = 0
offset_left = 799.0
offset_top = 963.0
offset_right = 1025.0
offset_bottom = 1040.0
theme_override_font_sizes/font_size = 50
text = "End Turn"

[node name="APLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 680.0
offset_top = 754.0
offset_right = 934.0
offset_bottom = 823.0
theme_override_font_sizes/font_size = 30
text = "AP = current/max"

[node name="EnemyHPLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 550.0
offset_top = 449.0
offset_right = 754.0
offset_bottom = 518.0
theme_override_font_sizes/font_size = 30
text = "Enemy1 HP"

[node name="EnemyHPLabel2" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 850.0
offset_top = 449.0
offset_right = 1054.0
offset_bottom = 518.0
theme_override_font_sizes/font_size = 30
text = "Enemy1 HP"

[node name="EnemyHPLabel3" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 1150.0
offset_top = 449.0
offset_right = 1354.0
offset_bottom = 518.0
theme_override_font_sizes/font_size = 30
text = "Enemy1 HP"

[node name="PlayerHPLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1328.0
offset_top = 797.0
offset_right = 1459.0
offset_bottom = 842.0
theme_override_font_sizes/font_size = 30
text = "min/max"

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 550.0
offset_top = 215.0
offset_right = 710.0
offset_bottom = 375.0

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 850.0
offset_top = 215.0
offset_right = 1010.0
offset_bottom = 375.0

[node name="ColorRect3" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 1150.0
offset_top = 215.0
offset_right = 1310.0
offset_bottom = 375.0

[node name="Vesper" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 253.0
offset_top = 688.0
offset_right = 413.0
offset_bottom = 848.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_p34au")
}

[node name="Sword" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 1495.0
offset_top = 626.0
offset_right = 1586.0
offset_bottom = 717.0
mouse_filter = 2
texture = ExtResource("2_v2va7")
expand_mode = 1

[node name="DamageCounter" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 236.0
offset_top = 867.0
offset_right = 436.0
offset_bottom = 964.0
theme_override_font_sizes/font_size = 50
text = "Damage"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="HPLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1127.0
offset_top = 799.0
offset_right = 1168.0
offset_bottom = 844.0
theme_override_font_sizes/font_size = 30
text = "HP"

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hefph")
}

[connection signal="pressed" from="AttackBtn" to="." method="_on_attack_btn_pressed"]
[connection signal="pressed" from="DefendBtn" to="." method="_on_defend_btn_pressed"]
[connection signal="pressed" from="BiteBtn" to="." method="_on_bite_btn_pressed"]
[connection signal="pressed" from="TurnOver" to="." method="_on_turn_over_pressed"]
[connection signal="gui_input" from="ColorRect" to="." method="_on_color_rect_gui_input"]
[connection signal="mouse_entered" from="ColorRect" to="." method="_on_color_rect_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect" to="." method="_on_color_rect_mouse_exited"]
[connection signal="gui_input" from="ColorRect2" to="." method="_on_color_rect_2_gui_input"]
[connection signal="mouse_entered" from="ColorRect2" to="." method="_on_color_rect_2_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect2" to="." method="_on_color_rect_2_mouse_exited"]
[connection signal="gui_input" from="ColorRect3" to="." method="_on_color_rect_3_gui_input"]
[connection signal="mouse_entered" from="ColorRect3" to="." method="_on_color_rect_3_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect3" to="." method="_on_color_rect_3_mouse_exited"]
[connection signal="gui_input" from="Vesper" to="." method="_on_color_rect_3_gui_input"]
[connection signal="mouse_entered" from="Vesper" to="." method="_on_color_rect_3_mouse_entered"]
[connection signal="mouse_exited" from="Vesper" to="." method="_on_color_rect_3_mouse_exited"]
